--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -34,14 +34,14 @@
 	</filter-mapping>
 
 
-	<filter>
-		<filter-name>sessionCheckFilter</filter-name>
-		<filter-class>kosta.filter.SessionCheckFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>sessionCheckFilter</filter-name>
-		<url-pattern>/front</url-pattern>
-	</filter-mapping>
+<!-- 	<filter> -->
+<!-- 		<filter-name>sessionCheckFilter</filter-name> -->
+<!-- 		<filter-class>kosta.filter.SessionCheckFilter</filter-class> -->
+<!-- 	</filter> -->
+<!-- 	<filter-mapping> -->
+<!-- 		<filter-name>sessionCheckFilter</filter-name> -->
+<!-- 		<url-pattern>/front</url-pattern> -->
+<!-- 	</filter-mapping> -->
 
 
 </web-app>
